changed wording of second learning objective

--- a/01-intro-to-R_wehi.html
+++ b/01-intro-to-R_wehi.html
@@ -71,7 +71,7 @@ img {
 <h2>Learning Objectives</h2>
 <ul>
 <li>Begin to appreciate the power of using R</li>
-<li>Understand some of the backbones of R (functions, objects, vectors, matrices)</li>
+<li>Begin to understand some of the backbones of R (functions, objects, vectors, matrices)</li>
 </ul>
 </blockquote>
 <hr />
